Fix address-card getting too small (#1966)

--- a/frontend/src/app/formly/types/address-type/address-type.component.scss
+++ b/frontend/src/app/formly/types/address-type/address-type.component.scss
@@ -1,3 +1,7 @@
 .address-cards {
   padding-bottom: 14px;
+
+  .address-card-wrapper {
+    min-width: 240px;
+  }
 }
